# public/spec/openapi.yaml
@@ -344,14 +344,6 @@ components:
           type: string
           example: ESMTPSA
           description: transaction type
-        transhost:
-          type: string
-          example: relay0.mailbaby.net
-          description: transaction host
-        originhost:
-          type: string
-          example: 199.231.189.154
-          description: origin host
         origin:
           type: string
           example: 199.231.189.154
@@ -360,10 +352,6 @@ components:
           type: string
           example: feeder
           description: interface name
-        date:
-          type: string
-          example: Thu, 14 Oct 2021 08:50:09 -0400
-          description: date processed
         sendingZone:
           type: string
           example: interserver
@@ -372,22 +360,18 @@ components:
           type: integer
           example: 63
           description: email body size in bytes
-        sourceMd5:
-          type: string
-          example: 1d7058e6a30369f200b0c34fab2fac92
-          description: md5 sum of the email
         seq:
           type: integer
-          example: 001
-          description: delivery sequency
+          example: 1
+          description: index of email in the to adderess list
+        recipient:
+          type: string
+          example: client@isp.com
+          description: to address this email is being sent to
         domain:
           type: string
           example: interserver.net
           description: to address domain
-        recipient:
-          type: string
-          example: client@isp.com
-          description: email receiver address
         locked:
           type: integer
           example: 1
@@ -404,72 +388,37 @@ components:
           type: string
           example: 2021-10-14T12:50:15.487Z
           description: queued timestamp
-        _lock:
-          type: string
-          example: lock 17c7eda538e0005d03 001
-          description: lock id
-        logger:
-          type: string
-          example:
-          description: logger
-        mxPort:
-          type: integer
-          example: 25
-          description: mx port number
-        connectionKey:
-          type: string
-          example: 206.72.200.46:interserver.net:25
-          description: connection key
         mxHostname:
           type: string
           example: mx.j.is.cc
           description: mx hostname
-        sentBodyHash:
+        response:
           type: string
-          example: 1d7058e6a30369f200b0c34fab2fac92
-          description: body hash
-        sentBodySize:
-          type: integer
-          example: 63
-          description: sent body size in bytes
-        md5Match:
-          type: integer
-          example: 1
-          description: md5 checksum matching result
+          example: 250 2.0.0 Ok queued as C91D83E128C
+          description: mail delivery response
       required:
         - _id
         - id
         - from
         - to
         - subject
-        - messageId
         - created
         - time
         - user
         - transtype
-        - transhost
-        - originhost
         - origin
         - interface
-        - date
         - sendingZone
         - bodySize
-        - sourceMd5
         - seq
-        - domain
         - recipient
+        - domain
         - locked
         - lockTime
         - assigned
         - queued
-        - _lock
-        - logger
-        - mxPort
-        - connectionKey
         - mxHostname
-        - sentBodyHash
-        - sentBodySize
-        - md5Match
+        - response
     SendMail:
       type: object
       description: Details for an Email
